# src/routes/shipFee.js
@@ -4,7 +4,6 @@ const ShipFeeController = require("../controllers/shipFeeController");
 const router = express.Router();
 
 router.get("/", ShipFeeController.GetAll);
-router.post("/location", ShipFeeController.GetShipFeeByLocation);
 router.post("/", ShipFeeController.CreateShipFee);
 router.delete("/:id", ShipFeeController.deleteShipFee);
 router.put("/:id", ShipFeeController.UpdateShipFee);
